--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,6 +127,8 @@ jobs:
     - name: Package tools
       run: 'mkdir LeanHRPT-Tools &&
             cp build/tools/vcdu2cadu LeanHRPT-Tools/ &&
+            cp build/tools/bin2raw16 LeanHRPT-Tools/ &&
+            cp build/tools/bin2cadu LeanHRPT-Tools/ &&
             tar -cf tools_linux_x86-64.tar LeanHRPT-Tools'
 
     - name: Upload AppImage
@@ -262,6 +264,8 @@ jobs:
             cp projection.ini                                          LeanHRPT-Decode/ &&
             cp build/LeanHRPT-Decode.exe                               LeanHRPT-Decode/ &&
             cp build/tools/vcdu2cadu.exe                               LeanHRPT-Decode/ &&
+            cp build/tools/bin2raw16.exe                               LeanHRPT-Decode/ &&
+            cp build/tools/bin2cadu.exe                                LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/bin/Qt5Core.dll                          LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/bin/Qt5Network.dll                       LeanHRPT-Decode/ &&
             cp $WIN_TEMP_PATH/bin/Qt5Gui.dll                           LeanHRPT-Decode/ &&
