--- a/LeanHRPT-Decode.desktop
+++ b/LeanHRPT-Decode.desktop
@@ -4,4 +4,4 @@ Name=LeanHRPT Decode
 Comment=An easy to use HRPT decoder
 Categories=HamRadio;Science
 Exec=LeanHRPT-Decode
-Icon=@CMAKE_INSTALL_PREFIX@/share/icons/LeanHRPT-Decode
+Icon=LeanHRPT-Decode
