--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,7 +100,7 @@ jobs:
             mkdir LeanHRPT-Decode.AppDir/usr/share/leanhrpt &&
             cp AppRun                            LeanHRPT-Decode.AppDir/ &&
             cp LeanHRPT-Decode.desktop           LeanHRPT-Decode.AppDir/ &&
-            cp logo128.png                       LeanHRPT-Decode.AppDir/usr/share/icons/LeanHRPT-Decode.png &&
+            cp logo.svg                          LeanHRPT-Decode.AppDir/LeanHRPT-Decode.svg &&
             cp presets.ini                       LeanHRPT-Decode.AppDir/usr/share/leanhrpt/ &&
             cp gradients.ini                     LeanHRPT-Decode.AppDir/usr/share/leanhrpt/ &&
             cp calibration.ini                   LeanHRPT-Decode.AppDir/usr/share/leanhrpt/ &&
