--- a/presets.ini
+++ b/presets.ini
@@ -19,6 +19,13 @@ category = Basic Composites
 author = Zeke800
 imagers = MSU-MR
 expression = ch1, ch4, ch5
+[Cloud RGB]
+description = Composite based off visible and infrared channels (rgb124)
+category = Basic Composites
+author = Xerbo
+imagers = AVHRR|MSU-MR|VIRR
+expression = ch1, ch2, ch4
+expression:MSU-MR = ch1, ch2, 1-ch5
 [SWIR]
 description = False color Shortwave-Infrared (RGB321, RGB621 on FengYun)
 category = Basic Composites
@@ -94,6 +101,12 @@ category = Blended Composites
 author = dereksgc
 imagers = VIRR
 expression = 0.7*ch1+0.3*(max(ch6,min(ch2,ch1))), 0.85*ch9+0.15*ch2, 0.7*ch7+0.3*ch1
+[Night Microphysics]
+description = Nightime Microphysics
+category = Blended Composites
+author = Xerbo
+imagers = MSU-MR
+expression = ch6-ch5, ch5-ch4, ch5
 
 # Additional products
 # (generates an image for informative purposes, e.g. NDVI)
