--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,8 +178,8 @@ jobs:
             cp -r 5.15.2/mingw81_64/* $WIN_TEMP_PATH'
 
     - name: Install OpenSSL
-      run: 'wget https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-openssl-1.1.1.g-1-any.pkg.tar.xz &&
-            tar -xf mingw-w64-x86_64-openssl-1.1.1.g-1-any.pkg.tar.xz'
+      run: 'wget https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-openssl-1.1.1.h-1-any.pkg.tar.zst &&
+            tar -xf mingw-w64-x86_64-openssl-1.1.1.h-1-any.pkg.tar.zst'
 
     - name: Patch Qt
       run: 'rm $WIN_TEMP_PATH/bin/moc.exe &&
