Add Ubuntu Jammy debian package Git 2.35.2 introduces new multiuser security measures, mark the working directory as safe to work around this

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -154,7 +154,7 @@ jobs:
   build_debian:
     strategy:
       matrix:
-        distro: [debian_bullseye, ubuntu_hirsute, ubuntu_impish]
+        distro: [debian_bullseye, ubuntu_hirsute, ubuntu_impish, ubuntu_jammy]
     runs-on: ubuntu-latest
     needs: [prepare_release]
 
