--- a/presets.ini
+++ b/presets.ini
@@ -55,7 +55,7 @@ description = Basic MTVZA false color
 category = Basic Composites
 author = Zeke800
 imagers = MTVZA
-expression = ch1, ch7, ch15
+expression = ch1, ch8, ch15
 [Low/High]
 description = Utilizes the high-GHz and low-GHz channels to create an image of only clouds
 category = Basic Composites
@@ -71,6 +71,24 @@ category = Basic Composites
 author = Xerbo
 imagers = AVHRR|MSU-MR|VIRR
 expression = ch2*0.6 + min(ch1,ch2)*0.4, ch2, ch1
+[NIR+NDVI]
+description = NDVI and 221 combined. Use the contrast bar to adjust the amount of blue and red (and contrast :). Does not work well on early morning or late evening passes.
+category = Blended Composites
+author = Zeke800
+imagers = AVHRR|MSU-MR
+expression = ch2+0.4,ch2+((ch2-ch1)/(ch2+ch1)+1)/12, ch1+0.5
+[CSWIR + NDVI]
+description = NDVI and CSWIR combined. Use the contrast bar to adjust the amount of blue and red (and contrast :). Does not work well on early morning or late evening passes.
+category = Blended Composites
+author = zeke800
+imagers = MSU-MR|AVHRR|VIRR
+expression = max(SWIR,min(ch2,ch1))+0.4, ch2+((ch2-ch1)/(ch2+ch1)+1)/12, ch1+0.5
+[SWIR+NIR+NDVI]
+description = A mix of SWIR, NIR and NDVI. Use the contrast bar to adjust the amount of green on the land.
+category = Blended Composites
+author = zeke800
+imagers = MSU-MR|AVHRR|VIRR
+expression = SWIR*0.5+ch2*0.5, ch2+((ch2-ch1)/(ch2+ch1)+1)/8, ch1
 [SWIR+NIR]
 description = 50/50 mix of SWIR and NIR
 category = Blended Composites
