--- a/presets.ini
+++ b/presets.ini
@@ -17,15 +17,16 @@
 description = Daytime Microphysics
 category = Basic Composites
 author = Zeke800
-imagers = MSU-MR
-expression = ch1, ch4, ch5
+imagers = MSU-MR|AVHRR|VIRR
+expression = ch1, (1-MWIR), (1-ch4)
+expression:MSU-MR = ch1, (1-ch4), (1-ch5)
 [Cloud RGB]
 description = Composite based off visible and infrared channels (rgb124)
 category = Basic Composites
 author = Xerbo
 imagers = AVHRR|MSU-MR|VIRR
 expression = ch1, ch2, ch4
-expression:MSU-MR = ch1, ch2, 1-ch5
+expression:MSU-MR = ch1, ch2, ch5
 [SWIR]
 description = False color Shortwave-Infrared (RGB321, RGB621 on FengYun)
 category = Basic Composites
@@ -105,8 +106,9 @@ expression = 0.7*ch1+0.3*(max(ch6,min(ch2,ch1))), 0.85*ch9+0.15*ch2, 0.7*ch7+0.3
 description = Nightime Microphysics
 category = Blended Composites
 author = Xerbo
-imagers = MSU-MR
-expression = ch6-ch5, ch5-ch4, ch5
+imagers = MSU-MR|AVHRR|VIRR
+expression = (1-ch5)-(1-ch4), (1-ch4)-(1-MWIR), (1-ch4)
+expression:MSU-MR = (1-ch6)-(1-ch5), (1-ch5)-(1-ch4), (1-ch5)
 
 # Additional products
 # (generates an image for informative purposes, e.g. NDVI)
@@ -120,8 +122,9 @@ expression = ((ch2-ch1)/(ch2+ch1)+1)/2
 description = Difference between 10.8 and 12.0 micron bands
 category = Additional Products
 author = Xerbo
-imagers = AVHRR|VIRR
+imagers = AVHRR|VIRR|MSU-MR
 expression = ch4-ch5
+expression:MSU-MR = ch5-ch6
 
 # Dynamic presets
 # (changes depending on the imager)
@@ -142,5 +145,5 @@ category = Dynamic Presets
 author = Xerbo
 imagers = AVHRR|MSU-MR|VIRR|HIRS
 expression = ch4
-expression:MSU-MR = 1-ch5
+expression:MSU-MR = ch5
 expression:HIRS = ch8
