--- a/projection.ini
+++ b/projection.ini
@@ -11,6 +11,27 @@ roll = -0.08
 pitch = -0.22
 toffset = 0
 
+[NOAA-18_HIRS]
+fov = 52.2
+yaw = 0.0
+roll = 0.0
+pitch = 0.0
+toffset = 0
+[NOAA-19_HIRS]
+fov = 52.2
+yaw = 0.0
+roll = 0.0
+pitch = 0.0
+toffset = 0
+
+# NOAA-18 MHS is dead
+[NOAA-19_MHS]
+fov = 50.0
+yaw = 0.0
+roll = 0.5
+pitch = 0.0
+toffset = 0.0
+
 [MetOp-A_AVHRR]
 fov = 55.2
 yaw = 0.3
@@ -49,12 +70,19 @@ roll = 0.5
 pitch = 0.0
 toffset = 0.5
 
+[Meteor-M2_MSU-MR]
+fov = 55.25
+yaw = 2.26
+roll = 2.0
+pitch = 0.0
+toffset = 0.0
 [Meteor-M22_MSU-MR]
 fov = 55.15
 yaw = 2.3
 roll = -0.18
 pitch = -0.1
 toffset = 0
+
 [Meteor-M22_MTVZA]
 curved = true
 fov = 52
@@ -63,12 +91,6 @@ roll = 0
 pitch = -53.3
 pitchscale = 0.9
 toffset = 0
-[Meteor-M2_MSU-MR]
-fov = 55.25
-yaw = 2.26
-roll = 2.0
-pitch = 0.0
-toffset = 0.0
 
 [FengYun-3C_VIRR]
 fov = 55.31
