Make development setup easier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,11 +66,17 @@ install(TARGETS LeanHRPT-Decode)
 install(FILES ${CMAKE_SOURCE_DIR}/LeanHRPT-Decode.desktop DESTINATION share/applications)
 install(FILES ${CMAKE_SOURCE_DIR}/logo128.png DESTINATION share/icons/hicolor/128x128/apps RENAME LeanHRPT-Decode.png)
 install(FILES ${CMAKE_SOURCE_DIR}/logo.svg DESTINATION share/icons/hicolor/scalable/apps RENAME LeanHRPT-Decode.svg)
+configure_file(logo128.png logo128.png COPYONLY)
+configure_file(logo.svg logo.svg COPYONLY)
 # Config files
 install(FILES ${CMAKE_SOURCE_DIR}/projection.ini DESTINATION share/leanhrpt)
 install(FILES ${CMAKE_SOURCE_DIR}/calibration.ini DESTINATION share/leanhrpt)
 install(FILES ${CMAKE_SOURCE_DIR}/presets.ini DESTINATION share/leanhrpt)
 install(FILES ${CMAKE_SOURCE_DIR}/gradients.ini DESTINATION share/leanhrpt)
+configure_file(projection.ini projection.ini COPYONLY)
+configure_file(calibration.ini calibration.ini COPYONLY)
+configure_file(presets.ini presets.ini COPYONLY)
+configure_file(gradients.ini gradients.ini COPYONLY)
 
 # Package information
 string(SUBSTRING ${VERSION} 1 -1 CPACK_PACKAGE_VERSION)
