--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -207,7 +207,7 @@ jobs:
             cp -r 5.15.2/mingw81_64/* $WIN_TEMP_PATH'
 
     - name: Install OpenSSL
-      run: 'wget https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-openssl-1.1.1.h-1-any.pkg.tar.zst &&
+      run: 'wget https://repo.msys2.org/mingw/mingw64/mingw-w64-x86_64-openssl-1.1.1.q-1-any.pkg.tar.zst &&
             tar -xf mingw-w64-x86_64-openssl-1.1.1.h-1-any.pkg.tar.zst'
 
     - name: Patch Qt
