Reprojection support (Mercator and Polar)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ file(GLOB_RECURSE CXX_SOURCE_FILES
     src/decoders/noaa_gac.cpp
     src/decoders/noaa_hrpt.cpp
     src/fingerprint.cpp
+    src/geo/crs.cpp
     src/geo/geolocation.cpp
     src/geometry.cpp
     src/imagecompositor.cpp
@@ -122,7 +123,7 @@ if (NOT VERSION STREQUAL "Unknown")
     include(CPack)
 endif()
 
-find_package(Doxygen)
+#find_package(Doxygen)
 if (DOXYGEN_FOUND)
     set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
     set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
