(NOAA) AMSU-A Support

--- a/projection.ini
+++ b/projection.ini
@@ -32,6 +32,19 @@ roll = 0.5
 pitch = 0.0
 toffset = 0.0
 
+[NOAA-18_AMSU-A]
+fov = 47
+yaw = -6
+roll = 0.0
+pitch = 0.0
+toffset = -7
+[NOAA-19_AMSU-A]
+fov = 47
+yaw = -6
+roll = 0.0
+pitch = 0.0
+toffset = -7
+
 [MetOp-A_AVHRR]
 fov = 55.2
 yaw = 0.3
