MetOp thermal calibration (ex channel 3A)

--- a/calibration.ini
+++ b/calibration.ini
@@ -1,7 +1,7 @@
 #
 # LeanHRPT calibration coefficients file
 # 
-#  This file contains the coefficients user to calibrate visible channels,
+#  This file contains the coefficients used to calibrate channels,
 #  currently it supports 3 types of calibration:
 #   linear (VIRR and MSU-MR, default)
 #   split_linear (AVHRR)
@@ -10,6 +10,8 @@
 #  Sources:
 #   https://www.ospo.noaa.gov/data/ppp/notice_files/aug1021.html
 #   http://www.nsmc.org.cn/en/NSMC/Contents/100089.html
+#   https://www.eumetsat.int/media/49299
+#   https://www.eumetsat.int/media/49298
 #   NOAA KLM User's Guide, August 2014 Revision
 #
 
@@ -56,6 +58,24 @@ b1 = -1.382
 a2 = 0.2291
 b2 = -99.67
 c = 500.85
+[MetOp-B_AVHRR/4]
+type = radiance
+ns = -4.75
+b0 = 4.85
+b1 = -0.096771
+b2 = 0.00048091
+vc = 933.63
+a = 0.504183
+b = 0.998638
+[MetOp-B_AVHRR/5]
+type = radiance
+ns = -4.39
+b0 = 4.36
+b1 = -0.076635
+b2 = 0.00033524
+vc = 839.62
+a = 0.381279
+b = 0.998861
 
 [MetOp-C_AVHRR/1]
 type = split_linear
@@ -78,6 +98,24 @@ b1 = -1.326
 a2 = 0.2300
 b2 = -99.73
 c = 498.72
+[MetOp-C_AVHRR/4]
+type = radiance
+ns = -6.27
+b0 = 6.58
+b1 = -0.132030
+b2 = 0.00065922
+vc = 930.31
+a = 0.5899
+b = 0.998403
+[MetOp-C_AVHRR/5]
+type = radiance
+ns = -2.55
+b0 = 3.23
+b1 = -0.056920
+b2 = 0.00024963
+vc = 828.6
+a = 0.3781050
+b = 0.998854
 
 [NOAA-15_AVHRR/1]
 type = split_linear
