--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,6 @@ set(CMAKE_AUTOUIC ON)
 
 # Generate with `find src/ | grep "\\.cpp" | sort`
 file(GLOB_RECURSE CXX_SOURCE_FILES
-    src/calibration.cpp
     src/commandline.cpp
     src/decoders/decoder.cpp
     src/decoders/fengyun_hrpt.cpp
@@ -25,6 +24,7 @@ file(GLOB_RECURSE CXX_SOURCE_FILES
     src/geo/crs.cpp
     src/geo/geolocation.cpp
     src/geometry.cpp
+    src/image/calibration.cpp
     src/image/compositor.cpp
     src/image/raw.cpp
     src/main.cpp
