Add NOAA-15 georeferencing

--- a/projection.ini
+++ b/projection.ini
@@ -1,28 +1,34 @@
+[NOAA-15_AVHRR]
+fov = 55
+yaw = -1.6
+roll = -0.1
+pitch = 0.0
+toffset = -0.03425
 [NOAA-18_AVHRR]
 fov = 54.9
 yaw = -1.8
 roll = -0.18
 pitch = 0
-toffset = -0.4
+toffset = -0.03425
 [NOAA-19_AVHRR]
 fov = 55.2
 yaw = 1.9
 roll = -0.08
-pitch = -0.22
-toffset = 0
+pitch = 0.0
+toffset = -0.03425
 
 [NOAA-18_HIRS]
 fov = 52.2
 yaw = 0.0
 roll = 0.0
 pitch = 0.0
-toffset = 0
+toffset = 0.0
 [NOAA-19_HIRS]
 fov = 52.2
 yaw = 0.0
 roll = 0.0
 pitch = 0.0
-toffset = 0
+toffset = 0.0
 
 # NOAA-18 MHS is dead
 [NOAA-19_MHS]
@@ -33,17 +39,17 @@ pitch = 0.0
 toffset = 0.0
 
 [NOAA-18_AMSU-A]
-fov = 47
-yaw = -6
+fov = 47.0
+yaw = -6.0
 roll = 0.0
 pitch = 0.0
-toffset = -7
+toffset = -7.0
 [NOAA-19_AMSU-A]
-fov = 47
-yaw = -6
+fov = 47.0
+yaw = -6.0
 roll = 0.0
 pitch = 0.0
-toffset = -7
+toffset = -7.0
 
 [MetOp-A_AVHRR]
 fov = 55.2
@@ -54,8 +60,8 @@ toffset = 0.0
 [MetOp-B_AVHRR]
 fov = 55
 yaw = 0.1
-roll = 0
-pitch = 0
+roll = 0.0
+pitch = 0.0
 toffset = -0.3
 [MetOp-C_AVHRR]
 fov = 55.1
@@ -87,23 +93,23 @@ toffset = 0.5
 fov = 54.8
 yaw = -3
 roll = 2.3
-pitch = 0
+pitch = 0.0
 toffset = -0.1
 [Meteor-M22_MSU-MR]
 fov = 54.9
 yaw = -2.6
-roll = 0
-pitch = 0
+roll = 0.0
+pitch = 0.0
 toffset = 0.3
 
 [Meteor-M22_MTVZA]
 curved = true
-fov = 52
-yaw = 5
-roll = 0
+fov = 52.0
+yaw = 5.0
+roll = 0.0
 pitch = -53.3
 pitchscale = 0.9
-toffset = 0
+toffset = 0.0
 
 [FengYun-3C_VIRR]
 fov = 55.31
