Disable saving with correction for CPR

--- a/presets.ini
+++ b/presets.ini
@@ -63,6 +63,12 @@ category = Basic Composites
 author = Zeke800
 imagers = MTVZA
 expression = ch29, ch28, ch1
+[CPR]
+description = CPR single channel
+category = Basic Composites
+author = dereksgc
+imagers = CPR
+expression = ch1
 
 # Blended composites
 # (goal is to produce satisfying false color)
