Preset adjustment and cleanup

--- a/presets.ini
+++ b/presets.ini
@@ -4,146 +4,88 @@
 #  It is formatted as ini and parsed by inipp (https://github.com/mcmtroffaes/inipp)
 #  meaning that features like variables are supported.
 #
-#  Entries must have a description, category, author, satellites and expression field
-#  in order to be parsed, entries without these will simply be ignored.
-#
+# Presets for uncalibrated imagers will not function reliably over multiple files
 
-# Presets for uncalibrated imagers will not function reliably over multiple files;
-# MSU-MR, MTVZA, HIRS, MHS
-
-# Basic composites
-# (same can be replicated with GUI compositor)
-[Day Microphysics]
-description = Daytime Microphysics
-category = Basic Composites
-author = Zeke800
-imagers = MSU-MR|AVHRR|VIRR
-expression = ch1, (1-MWIR), (1-ch4)
-expression:MSU-MR = ch1, (1-ch4), (1-ch5)
-[Cloud RGB]
-description = Composite based off visible and infrared channels (rgb124)
-category = Basic Composites
-author = Xerbo
-imagers = AVHRR|MSU-MR|VIRR
-expression = ch1, ch2, ch4
-expression:MSU-MR = ch1, ch2, ch5
-[SWIR]
-description = False color Shortwave-Infrared (RGB321, RGB621 on FengYun)
-category = Basic Composites
-author = Xerbo
-imagers = AVHRR|MSU-MR|VIRR
-expression = SWIR, ch2, ch1
-[RGB]
-description = Visible light composite (RGB197)
-category = Basic Composites
-author = Xerbo
+[Visible Color]
+description=Visible light band composite (daylight only)
 imagers = VIRR
-expression = ch1, ch9, ch7
-[MHS FC]
-description = Basic MHS false color
-category = Basic Composites
-author = dereksgc
-imagers = MHS
-expression = ch1, ch1, ch2
-[HIRS FC]
-description = Basic HIRS false color
-category = Basic Composites
-author = Zeke800
-imagers = HIRS
-expression = ch8, ch10, ch6
-[MTVZA FC]
-description = Basic MTVZA false color
-category = Basic Composites
-author = Zeke800
-imagers = MTVZA
-expression = ch1, ch7, ch15
-[Low/High]
-description = Utilizes the high-GHz and low-GHz channels to create an image of only clouds
-category = Basic Composites
-author = Zeke800
-imagers = MTVZA
-expression = ch29, ch28, ch1
+expression:VIRR = ch1,ch9,ch7
 
-# Blended composites
-# (goal is to produce satisfying false color)
-[NIR]
-description = False color Near-Infrared (RGB121 + RGB221)
-category = Basic Composites
-author = Xerbo
+[Natural Color (NIR)]
+description=Natural color using a red and near-infrared band (daylight only)
 imagers = AVHRR|MSU-MR|VIRR
-expression = ch2*0.6 + min(ch1,ch2)*0.4, ch2, ch1
-[SWIR+NIR]
-description = 50/50 mix of SWIR and NIR
-category = Blended Composites
-author = peter kooistra
-imagers = MSU-MR|AVHRR|VIRR
-expression = SWIR*0.5+ch2*0.5, ch2, ch1
-[CSWIR+NIR]
-description = 50/50 mix of CSWIR and NIR
-category = Blended Composites
-author = peter kooistra / dereksgc
-imagers = MSU-MR|AVHRR|VIRR
-expression = 0.5*max(SWIR,min(ch2,ch1)) + 0.5*ch2, ch2, ch1
-[CSWIR]
-description = False color Combined Shortwave-Infrared
-category = Blended Composites
-author = dereksgc
-imagers = MSU-MR|AVHRR|VIRR
-expression = max(SWIR,min(ch2,ch1)), ch2, ch1
-[NCNIR]
-description = Natural Color Near-Infrared
-category = Blended Composites
-author = dereksgc
-imagers = VIRR
-expression = 0.8*ch1+0.2*ch2, 0.8*ch9+0.2*ch2, 0.7*ch7+0.3*ch1
-[NCSWIR]
-description = Natural Color Shortwave-Infrared
-category = Blended Composites
-author = dereksgc
-imagers = VIRR
-expression = 0.7*ch1+0.3*(max(ch6,min(ch2,ch1))), 0.85*ch9+0.15*ch2, 0.7*ch7+0.3*ch1
-[Night Microphysics]
-description = Nightime Microphysics
-category = Blended Composites
-author = Xerbo
-imagers = MSU-MR|AVHRR|VIRR
-expression = (1-ch5)-(1-ch4), (1-ch4)-(1-MWIR), (1-ch4)
-expression:MSU-MR = (1-ch6)-(1-ch5), (1-ch5)-(1-ch4), (1-ch5)
+expression:AVHRR = ch2*0.6 + min(ch1,ch2)*0.4, ch2, ch1
+expression:MSU-MR = ch2*0.6 + min(ch1,ch2)*0.4, ch2, ch1
+expression:VIRR = ch2*0.6 + min(ch1,ch2)*0.4, ch2, ch1
 
-# Additional products
-# (generates an image for informative purposes, e.g. NDVI)
+[Natural Color (SWIR)]
+description=Natural color using a red, near-infrared, and shortwave-infrared band (daylight only)
+imagers = MSU-MR|AVHRR|VIRR
+expression:AVHRR = 0.6*max(SWIR,min(ch2,ch1)) + 0.4*ch2, ch2, ch1
+expression:MSU-MR = 0.6*max(SWIR,min(ch2,ch1)) + 0.4*ch2, ch2, ch1
+expression:VIRR = 0.6*max(SWIR,min(ch2,ch1)) + 0.4*ch2, ch2, ch1
+
+[False Color (NIR)]
+description=Combination of red and near-infrared bands (daylight only)
+imagers = AVHRR|MSU-MR|VIRR
+expression:AVHRR = ch2,ch1,ch1
+expression:MSU-MR = ch2,ch1,ch1
+expression:VIRR = ch2,ch1,ch1
+
+[False Color (SWIR)]
+description=Combination of red, near-infrared, and shortwave-infrared bands (daylight only)
+imagers = AVHRR|MSU-MR|VIRR
+expression:AVHRR = ch3,ch2,ch1
+expression:MSU-MR = ch3,ch2,ch1
+expression:VIRR = ch6,ch2,ch1
+
+[False Color (LWIR)]
+description=Combination of red, near-infrared, and longwave-infrared bands (daylight only)
+imagers = AVHRR|MSU-MR|VIRR
+expression:AVHRR = ch1,ch2,ch4
+expression:MSU-MR = ch1,ch2,ch5
+expression:VIRR = ch1,ch2,ch4
+
 [NDVI]
-description = Normalized Difference Vegetation Index
-category = Additional Products
-author = Xerbo
+description=Normalized difference vegetation index
 imagers = AVHRR|MSU-MR|VIRR
-expression = ((ch2-ch1)/(ch2+ch1)+1)/2
-[Volcanic ash]
-description = Difference between 10.8 and 12.0 micron bands
-category = Additional Products
-author = Xerbo
-imagers = AVHRR|VIRR|MSU-MR
-expression = ch4-ch5
-expression:MSU-MR = ch5-ch6
+expression:AVHRR = (ch2-ch1)/(ch2+ch1)
+expression:MSU-MR = (ch2-ch1)/(ch2+ch1)
+expression:VIRR = (ch2-ch1)/(ch2+ch1)
 
-# Dynamic presets
-# (changes depending on the imager)
-[Automatic]
-description = Automatically selects a suitable preset
-category = Dynamic Presets
-author = Xerbo
-imagers = AVHRR|MSU-MR|VIRR|MHS|HIRS|MTVZA
-expression:AVHRR = ${NIR:expression}
-expression:MSU-MR = ${CSWIR:expression}
-expression:VIRR = ${NCSWIR:expression}
-expression:MHS = ${MHS FC:expression}
-expression:HIRS = ${HIRS FC:expression}
-expression:MTVZA = ${MTVZA FC:expression}
-[Thermal]
-description = Automatically selects the thermal channel
-category = Dynamic Presets
-author = Xerbo
+[NDVI Color]
+description=Colorized normalized difference vegetation index
+imagers = AVHRR|VIRR
+expression:AVHRR = ch2,max(ch2,((ch2-ch1)/(ch2+ch1))),ch1
+expression:VIRR = ch2,max(ch2,((ch2-ch1)/(ch2+ch1))),ch1
+# NDVI Color doesn't work with MSU-MR
+
+[Thermal Infrared]
+description=Longwave-infrared band (thermal, ~11000 nm)
 imagers = AVHRR|MSU-MR|VIRR|HIRS
-expression = ch4
+expression:AVHRR = ch4
 expression:MSU-MR = ch5
+expression:VIRR = ch4
 expression:HIRS = ch8
+
+[Volcanic Ash]
+description = Difference between 10.8 and 12.0 micron bands
+imagers = AVHRR|VIRR|MSU-MR|HIRS
+expression:AVHRR = ch4-ch5
+expression:VIRR = ch4-ch5
+expression:MSU-MR = ch5-ch6
+expression:HIRS = ch8-ch10
+
+[False Color (Land)]
+description = Basic false color, using any bands that achieve an approximation of land color
+imagers = HIRS|MHS|MTVZA|AMSU-A
+expression:MHS = ch1, ch1, ch2
+expression:HIRS = ch20, ch20, ch19
+expression:MTVZA = ch6*0.9+ch10*0.1, ch6, ch10
+expression:AMSU-A = ch1*0.6 + min(ch4,ch1)*0.4, ch2, ch4
+
+[183 GHz Water Vapor]
+description = False color using bands in the proximity of the 183.31 GHz water vapor peak
+imagers = MHS|MTVZA
+expression:MHS = ch3,ch4,ch5
+expression:MTVZA = ch28,ch29,ch30
