--- a/presets.ini
+++ b/presets.ini
@@ -7,61 +7,61 @@
 # Presets for uncalibrated imagers will not function reliably over multiple files
 
 [Visible Color]
-description=Visible light band composite (daylight only)
+description = Visible light band composite (daylight only)
 imagers = VIRR
 expression:VIRR = ch1,ch9,ch7
 
 [Natural Color (NIR)]
-description=Natural color using a red and near-infrared band (daylight only)
+description = Natural color using a red and near-infrared band (daylight only)
 imagers = AVHRR|MSU-MR|VIRR
 expression:AVHRR = ch2*0.6 + min(ch1,ch2)*0.4, ch2, ch1
 expression:MSU-MR = ch2*0.6 + min(ch1,ch2)*0.4, ch2, ch1
 expression:VIRR = ch2*0.6 + min(ch1,ch2)*0.4, ch2, ch1
 
 [Natural Color (SWIR)]
-description=Natural color using a red, near-infrared, and shortwave-infrared band (daylight only)
+description = Natural color using a red, near-infrared, and shortwave-infrared band (daylight only)
 imagers = MSU-MR|AVHRR|VIRR
 expression:AVHRR = 0.6*max(SWIR,min(ch2,ch1)) + 0.4*ch2, ch2, ch1
 expression:MSU-MR = 0.6*max(SWIR,min(ch2,ch1)) + 0.4*ch2, ch2, ch1
 expression:VIRR = 0.6*max(SWIR,min(ch2,ch1)) + 0.4*ch2, ch2, ch1
 
 [False Color (NIR)]
-description=Combination of red and near-infrared bands (daylight only)
+description = Combination of red and near-infrared bands (daylight only)
 imagers = AVHRR|MSU-MR|VIRR
 expression:AVHRR = ch2,ch1,ch1
 expression:MSU-MR = ch2,ch1,ch1
 expression:VIRR = ch2,ch1,ch1
 
 [False Color (SWIR)]
-description=Combination of red, near-infrared, and shortwave-infrared bands (daylight only)
+description = Combination of red, near-infrared, and shortwave-infrared bands (daylight only)
 imagers = AVHRR|MSU-MR|VIRR
 expression:AVHRR = ch3,ch2,ch1
 expression:MSU-MR = ch3,ch2,ch1
 expression:VIRR = ch6,ch2,ch1
 
 [False Color (LWIR)]
-description=Combination of red, near-infrared, and longwave-infrared bands (daylight only)
+description = Combination of red, near-infrared, and longwave-infrared bands (daylight only)
 imagers = AVHRR|MSU-MR|VIRR
 expression:AVHRR = ch1,ch2,ch4
 expression:MSU-MR = ch1,ch2,ch5
 expression:VIRR = ch1,ch2,ch4
 
 [NDVI]
-description=Normalized difference vegetation index
+description = Normalized difference vegetation index
 imagers = AVHRR|MSU-MR|VIRR
 expression:AVHRR = (ch2-ch1)/(ch2+ch1)
 expression:MSU-MR = (ch2-ch1)/(ch2+ch1)
 expression:VIRR = (ch2-ch1)/(ch2+ch1)
 
 [NDVI Color]
-description=Colorized normalized difference vegetation index
+description = Colorized normalized difference vegetation index
 imagers = AVHRR|VIRR
 expression:AVHRR = ch2,max(ch2,((ch2-ch1)/(ch2+ch1))),ch1
 expression:VIRR = ch2,max(ch2,((ch2-ch1)/(ch2+ch1))),ch1
 # NDVI Color doesn't work with MSU-MR
 
 [Thermal Infrared]
-description=Longwave-infrared band (thermal, ~11000 nm)
+description = Longwave-infrared band (thermal, ~11000 nm)
 imagers = AVHRR|MSU-MR|VIRR|HIRS
 expression:AVHRR = ch4
 expression:MSU-MR = ch5
